import org.gradle.api.tasks.testing.logging.TestExceptionFormat



group = 'com.academy.fintech'
version = '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    group = rootProject.group
    version = rootProject.version

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    dependencies {
        implementation "org.postgresql:postgresql:42.6.0"
        implementation "org.hibernate:hibernate-core:6.1.0.Final"
        implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.1.4"
        implementation "org.springframework.boot:spring-boot-starter-web:3.1.4"
        implementation "org.liquibase:liquibase-core:4.23.0"
        implementation "org.springframework.boot:spring-boot-starter-test:3.1.4"
        implementation "org.springframework.boot:spring-boot-starter-actuator:3.1.4"
        implementation "org.springframework.boot:spring-boot-starter-json:3.1.3"
        testImplementation "org.springframework.boot:spring-boot-test:3.1.4"
        testImplementation "junit:junit:4.13.1"
        testImplementation "org.testcontainers:testcontainers:1.18.3"
        testImplementation "org.testcontainers:postgresql:1.18.3"
        testImplementation "org.testcontainers:junit-jupiter:1.18.3"
        implementation libs.spring.web

        implementation libs.lombok
        annotationProcessor libs.lombok
    }

    repositories {
        mavenCentral()
    }

    test {
        jvmArgs([
                '--enable-preview',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
        ])
        useJUnitPlatform()
        systemProperty "junit.jupiter.extensions.autodetection.enabled", "true"
        testLogging {
            showStandardStreams = true
            exceptionFormat TestExceptionFormat.FULL
            showExceptions true
            showCauses true
            showStackTraces true
        }
    }
}
